fix(eww): align calendar with another widgets

--- a/dot_config/eww/scss/widgets/context.scss
+++ b/dot_config/eww/scss/widgets/context.scss
@@ -14,3 +14,7 @@
 .first-container {
   padding: 5px;
 }
+
+.second-container {
+  padding: 5px;
+}
